--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,7 @@
 
 # I do not want to share my secrets
 /config/secrets.yml
+.env
+
+# I do not want to share uploaded files in source code
+/public/uploads/*
